force-app/main/default/objects/Requester__c/Requester__c.object-meta.xml
<CustomObject>
    <label>Requester</label>
    <nameField>
        <displayFormat>RQ-{0000}</displayFormat>
        <label>Requester Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requester</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>