force-app/main/default/objects/Requester__c/fields/Approved_from_accounts__c.field-meta.xml
<CustomField>
    <fullName>Approved_from_accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved from accounts</label>
    <type>Checkbox</type>
</CustomField>