force-app/main/default/objects/Requester__c/fields/Calculated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Amount__c</fullName>
    <label>Calculated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>