force-app/main/default/objects/Requester__c/fields/Instrument_Number__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Number__c</fullName>
    <label>Instrument No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>