force-app/main/default/objects/Requester__c/fields/Mode_Of__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of__c</fullName>
    <label>Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>CDM-cash</fullName>
            </value>
            <value>
                <fullName>CDM-cheque</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
                <isActive>false</isActive>
                <label>Credit Note</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>