force-app/main/default/objects/Requester__c/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <label>Others</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upkeep/refurbishment Charges</fullName>
            </value>
            <value>
                <fullName>DEWA Charges</fullName>
            </value>
            <value>
                <fullName>NOC Charges</fullName>
            </value>
            <value>
                <fullName>Admin Charges</fullName>
            </value>
            <value>
                <fullName>Late Payment Charges</fullName>
            </value>
            <value>
                <fullName>Cancellation Charges</fullName>
            </value>
            <value>
                <fullName>Cheque Dishonoured Charges</fullName>
            </value>
            <value>
                <fullName>Oqood Charges</fullName>
                <isActive>false</isActive>
                <label>Oqood Charges</label>
            </value>
            <value>
                <fullName>Title Deed Charges</fullName>
                <isActive>false</isActive>
                <label>Title Deed Charges</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>