force-app/main/default/objects/Requester__c/fields/Registration_Amount__c.field-meta.xml
<CustomField>
    <fullName>Registration_Amount__c</fullName>
    <label>DLD Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>