force-app/main/default/objects/Requester__c/fields/Reject_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reject_Comments__c</fullName>
    <label>Reject Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>