force-app/main/default/objects/Requester__c/fields/Rejection_Time__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Time__c</fullName>
    <formula>IF( ISBLANK( Rejection_Date__c) ,&apos;&apos;,(
IF (FLOOR((Rejection_Date__c- CreatedDate)) &gt; 0, TEXT(FLOOR((Rejection_Date__c- CreatedDate)) ) &amp; &quot; Days &quot;, &quot;&quot;)
&amp; IF(FLOOR(MOD((Rejection_Date__c- CreatedDate)* 24, 24 )) &gt; 0, TEXT(FLOOR(MOD((Rejection_Date__c- CreatedDate)* 24, 24 ))) &amp; &quot; Hours &quot;,&quot;&quot;)
&amp; TEXT(ROUND(MOD((Rejection_Date__c- CreatedDate)* 24 * 60, 60 ), 0)) &amp; &quot; Minutes &quot;
&amp; TEXT(ROUND(MOD((Rejection_Date__c- CreatedDate)* 24 * 60*60, 60 ), 0)) &amp; &quot; Seconds&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejection Time</label>
    <type>Text</type>
</CustomField>