force-app/main/default/objects/Requester__c/fields/Requester_Title_Formula__c.field-meta.xml
<CustomField>
    <fullName>Requester_Title_Formula__c</fullName>
    <formula>Name &amp;&quot; &quot;&amp; Booking__r.Unit__r.Name &amp;&quot; &quot;&amp; Booking__r.Primary_Applicant_Name__c &amp;&quot; &quot;&amp; Booking__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester Title</label>
    <type>Text</type>
</CustomField>