force-app/main/default/objects/Requester__c/fields/Signed_Booking_Form_is_Attached__c.field-meta.xml
<CustomField>
    <fullName>Signed_Booking_Form_is_Attached__c</fullName>
    <formula>Booking__r.Is_Booking_Form_Attached__c</formula>
    <label>Signed Booking Form is Attached</label>
    <type>Checkbox</type>
</CustomField>