force-app/main/default/objects/Requester__c/fields/Status_New__c.field-meta.xml
<CustomField>
    <fullName>Status_New__c</fullName>
    <description>This field is used in the Approval Process</description>
    <label>Status (New)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved By Manager</fullName>
            </value>
            <value>
                <fullName>Submitted for approval to LM</fullName>
            </value>
            <value>
                <fullName>Submitted for approval to Accounts</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
                <isActive>false</isActive>
                <label>Recalled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>