force-app/main/default/objects/Requester__c/fields/Status_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Status_ReadOnly__c</fullName>
    <formula>TEXT(Status_New__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>