force-app/main/default/objects/Requester__c/fields/Total_Amount_On_account__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_On_account__c</fullName>
    <formula>Booking__r.Total_On_Account_Money_With_Registration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount On account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>