force-app/main/default/objects/Requester__c/listViews/All_Requester.listView-meta.xml
<ListView>
    <fullName>All_Requester</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Requester</label>
</ListView>