force-app/main/default/objects/Requester__c/listViews/Approved_Request.listView-meta.xml
<ListView>
    <fullName>Approved_Request</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Status_New__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Mine</filterScope>
    <label>Approved Request</label>
</ListView>